@@ -5,6 +5,7 @@ CHANGE LOG
 * Big: Remove support code for game version 1.1.1 and before.
 * New: Change Line of Fire colours by attack direction.
 * New: Change arc colour of facing indicators.
+* New: Change color of floating armor bar.
 * New: Show ammo count in paper doll tooltip.
 * New: Balanced ammo usage to reduce chance of ammo explosion.
 * New: Auto Jettsion Ammo when they are useless.
@@ -13,6 +14,8 @@ CHANGE LOG
 * New: Attack Log now logs Round and Phase.
 * Mod: New logging code that formats and write logs in the background and will not cause the game to lag.
 * Mod: Attack logs are now automatically archived, with a total size limit also managed in the background.
+* Fix: Hit Location fix now modifies hit tables instead of totally overwriting GetHitLocation.
+* Fix: A few resources are now cleared on combat end to reduce memory leak.
 
 2018-07-27 AIM Version 2.0 for BATTLETECH 1.1.2
 
